# affordability-review-agent

./: Makefile  README.md  pyproject.toml
src/affordability/: models.py
src/affordability/tools/: completeness.py
tests/: test_completeness.py  test_package.py
